<resources>
    <string name="app_name">PSV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--    <string name="action_settings">Settings</string>-->
    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <!--    <string name="menu_tools">Tools</string>-->
    <!--    <string name="menu_share">Share</string>-->
    <!--    <string name="menu_send">Send</string>-->

    <string name="main_shopping_cart">Shopping Cart</string>
    <string name="main_wishlist">Wishlist</string>
    <string name="main_notifications">Notifications</string>
    <string name="main_search">Search</string>


    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_offer_zone">Offer Zone</string>
    <string name="menu_we_care">We Care</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_store">PSV Store</string>
    <string name="menu_franchise">Become Franchise</string>
    <string name="menu_about_us">About Us        |        Contact Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="read_more">More</string>
    <string name="read_less">. Show less.</string>

</resources>
