<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_2"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_package_2"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_bell"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_tag"
            android:title="@string/menu_offer_zone" />
        <item
            android:id="@+id/nav_we_care"
            android:icon="@drawable/ic_sprout_4"
            android:title="We Care" />
    </group>
    <group android:id="@+id/group_menu">
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_shop"
            android:title="@string/menu_store" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_franchise"
            android:icon="@drawable/ic_support"
            android:title="@string/menu_franchise" />
    </group>





<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
