<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/main_search"
        android:icon="@drawable/search_action_bar_icon_padding"
        android:orderInCategory="100"
        android:title="@string/main_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_notifications"
        android:orderInCategory="100"
        android:title="@string/main_notifications"
        android:icon="@drawable/notification_action_bar_icon_padding"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_wishlist"
        android:orderInCategory="100"
        android:title="@string/main_wishlist"
        app:showAsAction="always"
        android:icon="@drawable/wishlist_action_bar_icon_padding"/>
    <item
        android:id="@+id/main_shopping_cart"
        android:orderInCategory="100"
        android:title="@string/main_shopping_cart"
        app:showAsAction="always"
        android:icon="@drawable/cart_action_bar_icon_padding"/>


<!--    <item-->
<!--        android:id="@+id/action_settings"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_settings"-->
<!--        app:showAsAction="never" />-->
</menu>
